log
Thu 25 Apr 2024 12:35:32 AM UTC: 
 tests:  0|6
total_score: 0/70
2454f2c
Thu 25 Apr 2024 12:55:39 AM UTC: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
ed1301e
Thu 25 Apr 2024 12:56:49 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
e2e2419
Thu 25 Apr 2024 01:08:38 AM UTC: 
 hashmap.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:54:40: error: expected ‘;’ before ‘}’ token
   54 |         pos = (pos + 1) % map->capacity
      |                                        ^
      |                                        ;
......
   57 |       }
      |       ~                                 
Compilation failed
a2e50ed
Thu 25 Apr 2024 01:08:52 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1f2594c
Thu 25 Apr 2024 01:09:53 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 30/70
f08c509
Thu 25 Apr 2024 01:25:08 AM UTC: 
 hashmap.c | 29 ++++++++++++++++++++++++++---
 1 file changed, 26 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
943cbf4
